...
/** Object containing test tags used in the Shop screen UI for UI testing purposes. */
object ShopTestTags {

  const val SHOP_EDIT_BUTTON = "EDIT_SHOP_BUTTON"

  // Game list tags
  const val SHOP_GAME_PAGER = "SHOP_GAME_PAGER"
  const val SHOP_GAME_PAGER_INDICATOR_PREFIX = "SHOP_GAME_PAGER_INDICATOR_"

  const val SHOP_GAME_NAME_PREFIX = "SHOP_GAME_NAME_"
  const val SHOP_GAME_STOCK_PREFIX = "SHOP_GAME_STOCK_"
}

...
